# neml2

./: .gitignore  .gitmodules  CMakeLists.txt  tutorial.md
.claude/skills/add-model/: SKILL.md
.claude/skills/spec-generate/: SKILL.md
coverage/: coverage.info  genhtml.out  index-sort-f.html  index-sort-l.html  index.html
coverage/neml2/: index-sort-f.html  index-sort-l.html  index.html  neml2.cxx.func-c.html  neml2.cxx.func.html  neml2.cxx.gcov.html
coverage/neml2/base/: DiagnosticsInterface.cxx.func-c.html  DiagnosticsInterface.cxx.func.html  DiagnosticsInterface.cxx.gcov.html  EnumSelection.cxx.func-c.html  EnumSelection.cxx.func.html  EnumSelection.cxx.gcov.html  EnumSelectionBase.cxx.func-c.html  EnumSelectionBase.cxx.func.html  EnumSelectionBase.cxx.gcov.html  Factory.cxx.func-c.html  Factory.cxx.func.html  Factory.cxx.gcov.html  HITParser.cxx.func-c.html  HITParser.cxx.func.html  HITParser.cxx.gcov.html  InputFile.cxx.func-c.html  InputFile.cxx.func.html  InputFile.cxx.gcov.html  MultiEnumSelection.cxx.func-c.html  MultiEnumSelection.cxx.func.html  MultiEnumSelection.cxx.gcov.html  NEML2Object.cxx.func-c.html  NEML2Object.cxx.func.html  NEML2Object.cxx.gcov.html  Option.cxx.func-c.html  Option.cxx.func.html  Option.cxx.gcov.html  OptionBase.cxx.func-c.html  OptionBase.cxx.func.html  OptionBase.cxx.gcov.html  OptionSet.cxx.func-c.html  OptionSet.cxx.func.html  OptionSet.cxx.gcov.html  Parser.cxx.func-c.html  Parser.cxx.func.html  Parser.cxx.gcov.html  Registry.cxx.func-c.html  Registry.cxx.func.html  Registry.cxx.gcov.html  Settings.cxx.func-c.html  (+11 more)
coverage/neml2/dispatchers/: SimpleMPIScheduler.cxx.func-c.html  SimpleMPIScheduler.cxx.func.html  SimpleMPIScheduler.cxx.gcov.html  SimpleScheduler.cxx.func-c.html  SimpleScheduler.cxx.func.html  SimpleScheduler.cxx.gcov.html  SliceGenerator.cxx.func-c.html  SliceGenerator.cxx.func.html  SliceGenerator.cxx.gcov.html  StaticHybridScheduler.cxx.func-c.html  StaticHybridScheduler.cxx.func.html  StaticHybridScheduler.cxx.gcov.html  TensorLoader.cxx.func-c.html  TensorLoader.cxx.func.html  TensorLoader.cxx.gcov.html  ValueMapLoader.cxx.func-c.html  ValueMapLoader.cxx.func.html  ValueMapLoader.cxx.gcov.html  WorkScheduler.cxx.func-c.html  WorkScheduler.cxx.func.html  WorkScheduler.cxx.gcov.html  derivmap_helpers.cxx.func-c.html  derivmap_helpers.cxx.func.html  derivmap_helpers.cxx.gcov.html  index-sort-f.html  index-sort-l.html  index.html  valuemap_helpers.cxx.func-c.html  valuemap_helpers.cxx.func.html  valuemap_helpers.cxx.gcov.html
coverage/neml2/drivers/: Driver.cxx.func-c.html  Driver.cxx.func.html  Driver.cxx.gcov.html  ModelDriver.cxx.func-c.html  ModelDriver.cxx.func.html  ModelDriver.cxx.gcov.html  TransientDriver.cxx.func-c.html  TransientDriver.cxx.func.html  TransientDriver.cxx.gcov.html  index-sort-f.html  index-sort-l.html  index.html  link_anchor.cxx.func-c.html  link_anchor.cxx.func.html  link_anchor.cxx.gcov.html
coverage/neml2/equation_systems/: AssembledMatrix.cxx.func-c.html  AssembledMatrix.cxx.func.html  AssembledMatrix.cxx.gcov.html  AssembledVector.cxx.func-c.html  AssembledVector.cxx.func.html  AssembledVector.cxx.gcov.html  AxisLayout.cxx.func-c.html  AxisLayout.cxx.func.html  AxisLayout.cxx.gcov.html  EquationSystem.cxx.func-c.html  EquationSystem.cxx.func.html  EquationSystem.cxx.gcov.html  LinearSystem.cxx.func-c.html  LinearSystem.cxx.func.html  LinearSystem.cxx.gcov.html  NonlinearSystem.cxx.func-c.html  NonlinearSystem.cxx.func.html  NonlinearSystem.cxx.gcov.html  SparseMatrix.cxx.func-c.html  SparseMatrix.cxx.func.html  SparseMatrix.cxx.gcov.html  SparseVector.cxx.func-c.html  SparseVector.cxx.func.html  SparseVector.cxx.gcov.html  assembly.cxx.func-c.html  assembly.cxx.func.html  assembly.cxx.gcov.html  index-sort-f.html  index-sort-l.html  index.html  link_anchor.cxx.func-c.html  link_anchor.cxx.func.html  link_anchor.cxx.gcov.html
coverage/neml2/misc/: defaults.cxx.func-c.html  defaults.cxx.func.html  defaults.cxx.gcov.html  errors.cxx.func-c.html  errors.cxx.func.html  errors.cxx.gcov.html  index-sort-f.html  index-sort-l.html  index.html  string_utils.cxx.func-c.html  string_utils.cxx.func.html  string_utils.cxx.gcov.html  types.cxx.func-c.html  types.cxx.func.html  types.cxx.gcov.html
coverage/neml2/models/: BufferStore.cxx.func-c.html  BufferStore.cxx.func.html  BufferStore.cxx.gcov.html  ComposedModel.cxx.func-c.html  ComposedModel.cxx.func.html  ComposedModel.cxx.gcov.html  Data.cxx.func-c.html  Data.cxx.func.html  Data.cxx.gcov.html  ImplicitUpdate.cxx.func-c.html  ImplicitUpdate.cxx.func.html  ImplicitUpdate.cxx.gcov.html  Model.cxx.func-c.html  Model.cxx.func.html  Model.cxx.gcov.html  ModelNonlinearSystem.cxx.func-c.html  ModelNonlinearSystem.cxx.func.html  ModelNonlinearSystem.cxx.gcov.html  ParameterStore.cxx.func-c.html  ParameterStore.cxx.func.html  ParameterStore.cxx.gcov.html  Predictor.cxx.func-c.html  Predictor.cxx.func.html  Predictor.cxx.gcov.html  Variable.cxx.func-c.html  index.html  (+13 more)
dev/: searchindex.js
include/neml2/: misc  tensors
python/examples/: README.md  explain.md  explain_custom_input.md  run_explain.py  run_explain_openai.py
src/neml2/: CMakeLists.txt
src/neml2/models/solid_mechanics/: BiLinearMixedModeTractionSeparation.cxx  ExpTractionSeparation.cxx  PureElasticTractionSeparation.cxx  SalehaniIrani3DCTraction.cxx  TractionSeparationLaw.cxx
src/neml2/models/solid_mechanics/cohesive/: BiLinearMixedModeTraction.cxx  ExpTractionSeparation.cxx  PureElasticTractionSeparation.cxx  SalehaniIrani3DCTraction.cxx  TractionSeparationLaw.cxx
src/neml2/models/solid_mechanics/cohesive_zone/: BiLinearMixedModeTraction.cxx  ExpTractionSeparation.cxx  PureElasticTractionSeparation.cxx  SalehaniIrani3DCTraction.cxx  TractionSeparation.cxx
src/neml2/models/solid_mechanics/traction_separation/: BiLinearMixedModeTraction.cxx  BilinearMixedModeTractionLaw.cxx  CohesiveTractionLaw.cxx  ExpTractionSeparation.cxx  ExponentialDamageTractionLaw.cxx  PureElasticTractionSeparation.cxx  SalehaniIrani3DCTraction.cxx  TractionSeparation.cxx  TractionSeparationLaw.cxx
(+908 files in other folders)
